[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
log = "0.4.22"
sbi-rt = { version = "0.0.3", features = ["legacy"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
